--- a/templates/filetree.ejs
+++ b/templates/filetree.ejs
@@ -5,17 +5,17 @@
         <%=abs%>
     </title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <script src="/static/plugins/ep_codepad/static/js/cookies.js" type="text/javascript"></script>
-    <script src="/static/plugins/ep_codepad/static/js/jquery.js" type="text/javascript"></script>
-    <script src="/static/plugins/ep_codepad/static/js/jquery.easing.js" type="text/javascript"></script>
-    <script src="/static/plugins/ep_codepad/static/js/jqueryFileTree.js" type="text/javascript"></script>
-    <link href="/static/plugins/ep_codepad/static/css/jqueryFileTree.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="/static/plugins/ep_codepad/static/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="/static/css/pad.css" rel="stylesheet" type="text/css" media="screen" />
+    <script src="../static/plugins/ep_codepad/static/js/cookies.js" type="text/javascript"></script>
+    <script src="../static/plugins/ep_codepad/static/js/jquery.js" type="text/javascript"></script>
+    <script src="../static/plugins/ep_codepad/static/js/jquery.easing.js" type="text/javascript"></script>
+    <script src="../static/plugins/ep_codepad/static/js/jqueryFileTree.js" type="text/javascript"></script>
+    <link href="../static/plugins/ep_codepad/static/css/jqueryFileTree.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="../static/plugins/ep_codepad/static/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="../static/css/pad.css" rel="stylesheet" type="text/css" media="screen" />
     <script type="text/javascript">
         var theme = '<%=theme%>';
         if (getCookie("codepad_theme") != '') theme = getCookie("codepad_theme");
-        document.write('<link rel="stylesheet" type="text/css" href="/static/plugins/ep_codepad/static/css/theme/' + theme + '.css">');
+        document.write('<link rel="stylesheet" type="text/css" href="../static/plugins/ep_codepad/static/css/theme/' + theme + '.css">');
 
         $(document).ready(function() {
             $('#fileTree').fileTree({}, function(param) {
