--- a/templates/index_page.ejs
+++ b/templates/index_page.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/static/plugins/ep_codepad/static/css/font-awesome.min.css">
+<link rel="stylesheet" href="../static/plugins/ep_codepad/static/css/font-awesome.min.css">
 <style type="text/css">
     #codepad-inner {
         position: relative;
@@ -8,8 +8,8 @@
     }
 </style>
 
-<script src="/static/plugins/ep_codepad/static/js/jquery.js " type="text/javascript "></script>
-<script src="/static/plugins/ep_codepad/static/js/cookies.js " type="text/javascript "></script>
+<script src="../static/plugins/ep_codepad/static/js/jquery.js " type="text/javascript "></script>
+<script src="../static/plugins/ep_codepad/static/js/cookies.js " type="text/javascript "></script>
 <script type="text/javascript">
     var theme = "<%=theme%>";
     var themes = "<%= themes %>".split(',');;
