--- a/templates/view.ejs
+++ b/templates/view.ejs
@@ -5,9 +5,9 @@
     <title>
         <%=file%>
     </title>
-    <script type="text/javascript" src="/static/plugins/ep_codepad/static/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/plugins/ep_codepad/static/js/cookies.js"></script>
-    <script src="/static/plugins/ep_codepad/static/js/highlight.pack.js"></script>
+    <script type="text/javascript" src="../static/plugins/ep_codepad/static/js/jquery.js"></script>
+    <script type="text/javascript" src="../static/plugins/ep_codepad/static/js/cookies.js"></script>
+    <script src="../static/plugins/ep_codepad/static/js/highlight.pack.js"></script>
     <script type="text/javascript">
         if ('<%=uri%>' != '#') {
             if (document.addEventListener) {
@@ -26,7 +26,7 @@
         var theme = '<%=theme%>';
         if (getCookie("codepad_theme") != '') theme = getCookie("codepad_theme");
 
-        document.write('<link rel="stylesheet" type="text/css" href="/static/plugins/ep_codepad/static/css/theme/' + theme + '.css">');
+        document.write('<link rel="stylesheet" type="text/css" href="../static/plugins/ep_codepad/static/css/theme/' + theme + '.css">');
 
         if ('<%=brush%>' != 'plain')
             $(document).ready(function() {
